# EARSAudio

./: CMakeLists.txt  LICENSE  README.md
include/: ears.h
src/: cli.c  ea_schl.c  ealayer3.c  ears.c
